--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@google/genai": "^1.8.0",
     "discord.js": "^14.21.0",
-    "dotenv": "^17.0.1"
+    "dotenv": "^17.0.1",
+    "node-cron": "^4.2.0",
+    "sqlite3": "^5.1.7"
   }
 }
